Storage layout - made box cells bigger Fixed a white-space nowrap

--- a/trunk/app/webroot/css/style.css
+++ b/trunk/app/webroot/css/style.css
@@ -1926,9 +1926,13 @@ span.button a{
 .storageLayout td{
 	border-style:solid; 
 	border-width:1px; 
-	min-width: 30px; 
+	min-width: 50px; 
 	border-color: #000;
 	padding: 0 0 5px 0;
+}
+
+.storageLayout td ul{
+	min-height: 25px;	
 }
 
 div.extra{
